Fix section 1 layout and correct button spacing

--- a/style.css
+++ b/style.css
@@ -29,13 +29,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 24px;
     box-sizing: content-box;
-    padding: 100px 160px 120px;
+    padding: 80px 0px 120px;
     background-color: #1f2937;
 }
 
 .s1-container {
     width: 440px;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
 }
 
 .s1-container h1 {
@@ -45,7 +49,7 @@
 }
 .s1-container p {
     font-size: 18px;
-    color: #e5e7eb;
+    color: #e5e7ebbd;
 }
 
 .section1 img {
@@ -124,14 +128,15 @@ cite {
 }
 
 .s4-container p {
-    color: #e5e7ebaf;
+    color: #e5e7ebc8;
 }
 
 button {
     font-size: 16px;
     font-weight: bold;
     background-color: #3882f6;
-    padding: 8px 30px;
+    width: 120px;
+    height: 36px;
     border-radius: 8px;
     border-style: solid;
     border-color: #3882f6;
